--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "This is a template to start an automation framework with Cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "e2e:started": "cypress run --browser chrome --spec cypress/e2e/1-getting-started --headed",
+    "report:merge": "mochawesome-merge results/*.json > index.json",
+    "report:generate": "marge index.json --reportDir public --assetsDir public/assets --reportPageTitle index.html"
   },
   "author": "Lien Ngo",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.6.1"
+    "cypress": "^13.6.1",
+    "cypress-mochawesome-reporter": "^3.7.0",
+    "cypress-multi-reporters": "^1.6.4"
+  },
+  "dependencies": {
+    "mocha-junit-reporter": "^2.2.1",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
