--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is a template to start an automation framework with Cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "e2e:started": "cypress run --browser chrome --spec cypress/e2e/1-getting-started",
+    "e2e:advanced": "cypress run --browser chrome --spec cypress/e2e/2-advanced-examples"
   },
   "author": "Lien Ngo",
   "license": "ISC",
