--- a/.github/workflows/e2e_run.yml
+++ b/.github/workflows/e2e_run.yml
@@ -13,34 +13,39 @@ env:
   currenTest: 1-getting-started
 
 jobs:
-  initTest:
+  build-cypress-matrix:
     runs-on: ubuntu-latest
-    outputs:
-      specConfig: ${{ steps.configVar.outputs.specConfig }}
-      matrix: ${{ steps.readSpectoMatrix.outputs.matrix }}
     steps:
-      - id: configVar
-        run: |
-          echo "name=specConfig::video=false,baseUrl=https://example.cypress.io/${{ env.runningEnv }}" >> $GITHUB_OUTPUT  
-        shell: bash
-      - uses: actions/checkout@v4
-      # Step to run the JavaScript script to read the Cypress specs matrix
-      - name: Read Spec to Matrix
-        id: readSpectoMatrix
-        run: node scripts/readSpectoMatrix.js
+      - name: checkout code
+        uses: actions/checkout@v4
+      - id: set-spec-matrix
+        run: echo "specs=$(node scripts/readSpectoMatrix.js)" >> $GITHUB_OUTPUT
         env:
           TEST_PATH: 'cypress/${{ env.testingScope }}/${{ env.currenTest }}'
+    outputs:
+      specs: ${{ steps.set-spec-matrix.outputs.specs }}
 
   e2e-run:
     timeout-minutes: 10
-    needs: [initTest]
+    needs: [build-cypress-matrix]
     runs-on: ubuntu-latest
+    
     strategy:
-      matrix:  ${{ fromJSON(needs.initTest.outputs.matrix) }}
       fail-fast: false
-    env:
-      specConfig: ${{ needs.initTest.outputs.specConfig }}
+      max-parallel: 64
+      matrix:
+        config:
+          [
+            {
+              type: 'desktop',
+              config: 'viewportWidth=1920,viewportHeight=1080',
+            }
+          ]
+        browser: [chrome]
+        specs: ${{ fromJson(needs.build-cypress-matrix.outputs.specs) }}
+    
     container: cypress/browsers:node16.5.0-chrome94-ff93
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -49,8 +54,9 @@ jobs:
         with:
           record: false
           headless: true
-          browser: chrome
-          spec: ${{ matrix.specs.spec}}
+          browser: ${{ matrix.browser }}
+          config: ${{ matrix.config.config }}
+          spec: ${{ matrix.specs }}
           env: testingScope=${{ env.testingScope }}
-          config: ${{ env.specConfig }}
           
+#https://dev.to/pthapa1/how-to-run-cypress-tests-in-parallel-in-github-actions-40pj
