--- a/.github/workflows/e2e_run.yml
+++ b/.github/workflows/e2e_run.yml
@@ -33,17 +33,17 @@ jobs:
       fail-fast: false
       max-parallel: 64
       matrix:
-        config:
-          [
-            {
-              type: 'desktop',
-              config: 'viewportWidth=1920,viewportHeight=1080',
-            }
-          ]
+        #config:
+        #  [
+        #    {
+        #      type: 'desktop',
+        #      config: 'viewportWidth=1920,viewportHeight=1080',
+        #    }
+        #  ]
         browser: [chrome]
         specs: ${{ fromJson(needs.build-cypress-matrix.outputs.specs) }}
     
-    container: cypress/browsers:node16.5.0-chrome94-ff93
+   # container: cypress/browsers:node16.5.0-chrome94-ff93
     
     steps:
       - name: Checkout
@@ -54,7 +54,7 @@ jobs:
           record: false
           headed: true
           browser: ${{ matrix.browser }}
-          config: ${{ matrix.config.config }}
+          #config: ${{ matrix.config.config }}
           spec: ${{ matrix.specs }}
           
 #https://dev.to/pthapa1/how-to-run-cypress-tests-in-parallel-in-github-actions-40pj
