Update and rename e2e_run.yml to e2e_run_matrix.yml

--- a/.github/workflows/e2e_run_matrix.yml
+++ b/.github/workflows/e2e_run_matrix.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   testingScope: e2e
-  runningEnv: staging #commands (int / prod / preprod)
+  runningEnv: staging
   currenTest: 1-getting-started
 
 jobs:
