Update and rename e2e_run_matrix.yml to e2e_run_by_matrix.yml

--- a/.github/workflows/e2e_run_by_matrix.yml
+++ b/.github/workflows/e2e_run_by_matrix.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   testingScope: e2e
-  runningEnv: staging
+  #runningEnv: staging
   currenTest: 1-getting-started
 
 jobs:
@@ -42,8 +42,6 @@ jobs:
         #  ]
         browser: [chrome]
         specs: ${{ fromJson(needs.build-cypress-matrix.outputs.specs) }}
-    
-   # container: cypress/browsers:node16.5.0-chrome94-ff93
     
     steps:
       - name: Checkout
