--- a/.github/workflows/e2e_run_basic.yml
+++ b/.github/workflows/e2e_run_basic.yml
@@ -6,7 +6,7 @@ on:
 env:
   testingScope: e2e
   #runningEnv: staging
-  currenTest: 1-getting-started
+  currenTest: 2-advanced-examples
 
 jobs:
   cypress-tests:
