--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "e2e:started": "cypress run --browser chrome --spec cypress/e2e/1-getting-started",
+    "e2e:started": "cypress run --browser chrome --spec cypress/e2e/1-getting-started --headed",
     "e2e:advanced": "cypress run --browser chrome --spec cypress/e2e/2-advanced-examples",
-    "report:merge": "mochawesome-merge results/*.json > index.json",
-    "report:generate": "marge index.json --reportDir public --assetsDir public/assets --reportPageTitle index.html"
+    "report:merge": "mochawesome-merge cypress/results/*.json > cypress/results/mochawesome-report/index.json",
+    "report:generate": "marge cypress/results/mochawesome-report/index.json --reportDir public --assetsDir public/assets --reportPageTitle index.html"
   },
   "author": "Lien Ngo",
   "license": "ISC",
