--- a/.github/workflows/e2e_run_mocha_reporter.yml
+++ b/.github/workflows/e2e_run_mocha_reporter.yml
@@ -19,7 +19,7 @@ on:
 env:
   testingScope: e2e
   #runningEnv: staging
-  currenTest: ${{ github.event.inputs.currentTest }}
+  currenTest: 1-getting-started
 
 jobs:
   build-cypress-matrix:
@@ -82,7 +82,7 @@ jobs:
         continue-on-error: true            
         uses: actions/upload-artifact@v4.1.0
         with:
-          name: ${{matrix.specs }}
+          name: ${{matrix.specs.name }}
           path: |
                 cypress/results
                 cypress/screenshots/*(failed)*.png 
