--- a/.github/workflows/e2e_run_mocha_reporter.yml
+++ b/.github/workflows/e2e_run_mocha_reporter.yml
@@ -82,7 +82,7 @@ jobs:
         continue-on-error: true            
         uses: actions/upload-artifact@v4.1.0
         with:
-          name: ${{matrix.specs.name }}
+          name: $(basename "${{ matrix.specs }}")
           path: |
                 cypress/results
                 cypress/screenshots/*(failed)*.png 
